2018-08-27  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/gnu/netinet/udp.h (UDP_SEGMENT): New macro.

2018-08-25  Paul Eggert  <eggert@cs.ucla.edu>

	regex: fix uninitialized memory access
	I introduced this bug into gnulib in commit
	8335a4d6c7b4448cd0bcb6d0bebf1d456bcfdb17 dated 2006-04-10;
	eventually it was merged into glibc.  The bug was found by
	project-repo <bugs@feusi.co> and reported here:
	https://lists.gnu.org/r/sed-devel/2018-08/msg00017.html
	Diagnosis and draft fix reported by Assaf Gordon here:
	https://lists.gnu.org/r/bug-gnulib/2018-08/msg00071.html
	https://lists.gnu.org/r/bug-gnulib/2018-08/msg00142.html
	* posix/regex_internal.c (build_wcs_upper_buffer):
	Fix bug when mbrtowc returns 0.

2018-08-24  Carlos O'Donell  <carlos@redhat.com>

	* po/be.po: Update translation.

2018-08-24  DJ Delorie  <dj@delorie.com>

	* support/Makefile (LDLIBS-links-dso-program): Add -lgcc and
	$(libunwind).

2018-08-24  Paul Pluzhnikov  <ppluzhnikov@google.com>

        [BZ #23400]
        * stdlib/test-bz22786.c (do_test): Fix undefined behavior, don't
        create temporary files in source tree.

2018-08-24  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/generic/math-tests-trap.h: New file.
	* sysdeps/generic/math-tests.h: Include <math-tests-trap.h>.
	(EXCEPTION_ENABLE_SUPPORTED): Do not define here.
	* sysdeps/aarch64/math-tests.h: Remove file.
	* sysdeps/arm/math-tests.h: Likewise.
	* sysdeps/riscv/math-tests.h: Likewise.
	* sysdeps/aarch64/math-tests-trap.h: New file.
	* sysdeps/arm/math-tests-trap.h: Likewise.
	* sysdeps/riscv/math-tests-trap.h: Likewise.

2018-08-24  Wilco Dijkstra  <wdijkstr@arm.com>

	* math/Makefile: Remove empty files k_sin(f).c, k_cos(f).c.
	Remove unused files e_rem_pio2(f).c, k_rem_pio2f.c.
	* sysdeps/i386/fpu/e_rem_pio2.c: Delete file.
	* sysdeps/ia64/fpu/e_rem_pio2.c: Likewise.
	* sysdeps/ia64/fpu/e_rem_pio2f.c: Likewise.
	* sysdeps/ia64/fpu/k_rem_pio2f.c: Likewise.
	* sysdeps/ieee754/dbl-64/e_rem_pio2.c: Likewise.